@startuml
'https://plantuml.com/class-diagram

interface CostStrategy {
+getCost(ShipmentOption): ShipmentCost
}
class WeightedCostStrategy {
-strategies : Map<CostStrategy, BigDecimal>
}
class MonetaryCostStrategy
class CarbonCostStrategy

WeightedCostStrategy *-- CostStrategy
WeightedCostStrategy ..|> CostStrategy
MonetaryCostStrategy ..|> CostStrategy
CarbonCostStrategy ..|> CostStrategy

@enduml